--- a/package.json
+++ b/package.json
@@ -4,25 +4,20 @@
   "version": "0.0.0",
   "author": "William Durand <will+git@drnd.me>",
   "license": "MIT",
-
   "keywords": "hubot,hubot-scripts,ansible",
-
   "repository": {
     "type": "git",
     "url": "git://github.com/hubot-scripts/hubot-ansible.git"
   },
-
   "bugs": {
     "url": "https://github.com/hubot-scripts/hubot-ansible/issues"
   },
-
   "dependencies": {
+    "shelljs": "^0.6.0"
   },
-
   "peerDependencies": {
     "hubot": "2.x"
   },
-
   "devDependencies": {
     "chai": "^2.1.1",
     "coffee-script": "1.6.3",
@@ -32,14 +27,13 @@
     "grunt-mocha-test": "~0.12.7",
     "grunt-release": "~0.11.0",
     "hubot": "2.x",
+    "hubot-mock-adapter": "^1.0.0",
     "matchdep": "~0.3.0",
     "mocha": "^2.1.0",
     "sinon": "^1.13.0",
     "sinon-chai": "^2.7.0"
   },
-
   "main": "index.coffee",
-
   "scripts": {
     "test": "grunt test"
   }
