--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hubot-ansible",
+  "name": "hubot-ansible-me",
   "description": "A hubot script that runs Ansible playbooks",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "William Durand <will+git@drnd.me>",
   "license": "MIT",
   "keywords": "hubot,hubot-scripts,ansible",
