--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
+sudo: false
+
 language: node_js
 node_js:
   - "0.12"
   - "4"
   - "5"
-sudo: false
+
 cache:
   directories:
     - node_modules
+
+before_install:
+  - pip install --user ansible
